--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ div {
     background-color: white;
     border-radius: 10px;
     margin: 18px;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-end;
+    flex-direction: column;
 }
 
 #buttons {
@@ -33,6 +34,9 @@ div {
     padding: 8px;
 }
 
+#displayExpression{
+    align-self: center;
+}
 
 button {
     margin: 0;
