--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ div {
     align-items: center;
     border-radius: 20px;
     flex-direction: column;
+    border: 3px solid black;
 }
 
 #screen {
@@ -21,13 +22,14 @@ div {
     justify-content: space-between;
     align-items: flex-end;
     flex-direction: column;
+    border: 1px solid black;
 }
 
 #buttons {
     flex-direction: row;
     flex: 1;
     align-self: stretch;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
     gap: 8px;
@@ -44,6 +46,7 @@ button {
     min-height: 60px;
     border-radius: 10px;
     font-size: 24px;
+
 }
 h2 {
     text-align: center ;
